# kbeyond-

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile.macos  PULL_REQUEST_TEMPLATE.md  README.md  labeler.yml  package-info.json
ISSUE_TEMPLATE/: bug.md  config.yml  docs.md  task.md
docs/: BUGLOG.md  PHONON.md  PRIME_MODES.md  QA.md  ROADMAP.md  WORKLOG.md  roadmap_it.md
help/: kbeyond~.maxhelp
presets/: kbeyond_presets.json
scripts/: build_macos.sh  build_windows.ps1  create_milestones_and_issues.sh  setup_labels.sh  verify_max_sdk.sh
source/: householder_phi16.h  kbeyond_tilde.cpp  kbeyond_tilde.h
source/dsp/: buffers.cpp  buffers.h  decay.cpp  decay.h  detector.cpp  detector.h  dsp_assert.h  early.cpp  early.h  fdn.cpp  fdn.h  filters.cpp  filters.h  mixing.cpp  mixing.h  mod.cpp  mod.h  params.h  prime_modes.cpp  prime_modes.h
tests/: early_reflections_test.cpp  motion_detector_test.cpp
workflows/: build-macos.yml
